# graphics_prog

./: About_CMake.md  CMakeLists.txt  LICENSE  README.md
src/: test_window.cpp  triangle.cpp
